Try agian/Main menu after game is end

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Mickie&apos;s balls</name>
+	<name>MickieballV2</name>
 	<comment></comment>
 	<projects>
 	</projects>
